[tool.poetry]
name = "pp"
version = "0.1.0"
description = ""
authors = ["ostapmatviiv <ostap20021906@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
Flask = "^1.1.2"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
